fixtures/gate/reject/ctor_arity.oath
(data Box [] (Mk Int))
(defn bad [] [] Box (Mk))
